--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -74,13 +74,12 @@ h4 {
 p {
     font-size: 1rem;
     margin: 0;
-    line-height: 1.5;
+    line-height: 2;
 }
 
 main {
-    display: block;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    position: absolute;
 }
 
 .clickable {
