--- a/static/styles/variables.css
+++ b/static/styles/variables.css
@@ -59,7 +59,5 @@
 /* Possible blue alternative to primary red? */
 /*--primary: oklch(0.39 0.088 264.456);*/
 
+/* Old red color */
 /*--primary: oklch(0.4 0.1 20);*/
-
-
-
