--- a/src/lib/styles/mixins/_theme.scss
+++ b/src/lib/styles/mixins/_theme.scss
@@ -1,4 +1,5 @@
-[data-theme="light"] {
+// Generates variables for light mode
+@mixin light {
     /* hsl (fallback color) */
     --bg-dark: hsl(15, 7%, 89%);
     --bg: hsl(0, 12%, 94%);
@@ -27,7 +28,8 @@
     --shadow: 0px 2px 2px oklch(0 0 0 / 0.2), 0px 4px 4px oklch(0 0 0 / 0.1);
 }
 
-[data-theme="dark"] {
+// Generates variables for dark mode
+@mixin dark {
     /* hsl (fallback color) */
     --bg-dark: hsl(0, 0%, 5%);
     --bg: hsl(300, 2%, 12%);
