--- a/src/lib/styles/mixins/_fonts.scss
+++ b/src/lib/styles/mixins/_fonts.scss
@@ -1,11 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 $fontSizes: (
         h1: 3.815rem,
         h2: 3.052rem,
         h3: 2.441rem,
         h4: 1.953rem,
-        p: 1rem
+        p: 1rem,
+        label: 0.75rem,
+        button: 0.75rem
 );
 
 @mixin fontSizes() {
@@ -16,16 +18,29 @@ $fontSizes: (
   h1,
   h2,
   h3,
-  h4 {
+  h4,
+  button,
+  label {
     color: var(--text);
     font-family: 'Nunito', sans-serif;
-    margin: 0;
+    font-weight: 600;
+    letter-spacing: -1px;
+  }
+
+  button,
+  label {
+    letter-spacing: 1px;
   }
 
   p,
   span {
-    margin: 0;
-    line-height: 2;
+    line-height: 1.5;
+  }
+
+  html,
+  body {
+    color: var(--text-muted);
+    font-family: 'Nunito sans', sans-serif;
   }
 }
 
