--- a/src/lib/styles/mixins/_grid.scss
+++ b/src/lib/styles/mixins/_grid.scss
@@ -21,7 +21,7 @@ $columnWidths: (
   @include xs {
     @each $columnWidth, $width in $columnWidths {
       .col-#{$columnWidth} {
-        width: #{$width};
+        max-width: #{$width};
       }
     }
   }
@@ -29,7 +29,7 @@ $columnWidths: (
   @include sm {
     @each $columnWidth, $width in $columnWidths {
       .col-sm-#{$columnWidth} {
-        width: #{$width};
+        max-width: #{$width};
       }
     }
   }
@@ -37,7 +37,7 @@ $columnWidths: (
   @include md {
     @each $columnWidth, $width in $columnWidths {
       .col-md-#{$columnWidth} {
-        width: #{$width};
+        max-width: #{$width};
       }
     }
   }
@@ -45,7 +45,7 @@ $columnWidths: (
   @include lg {
     @each $columnWidth, $width in $columnWidths {
       .col-lg-#{$columnWidth} {
-        width: #{$width};
+        max-width: #{$width};
       }
     }
   }
@@ -53,7 +53,7 @@ $columnWidths: (
   @include xl {
     @each $columnWidth, $width in $columnWidths {
       .col-xl-#{$columnWidth} {
-        width: #{$width};
+        max-width: #{$width};
       }
     }
   }
@@ -61,7 +61,7 @@ $columnWidths: (
   @include xxl {
     @each $columnWidth, $width in $columnWidths {
       .col-xxl-#{$columnWidth} {
-        width: #{$width};
+        max-width: #{$width};
       }
     }
   }
@@ -69,8 +69,11 @@ $columnWidths: (
   [class^='col-'],
   [class*='col-'] {
     flex: 1 1 auto;
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
+    padding-right: 1rem;
+
+    &:last-child {
+      padding-right: 0;
+    }
   }
 }
 
@@ -78,8 +81,7 @@ $columnWidths: (
   .row {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -0.75rem;
-    margin-right: -0.75rem;
+    margin-right: -1rem;
     row-gap: 1.5rem;
   }
 }
