--- a/src/lib/styles/app.scss
+++ b/src/lib/styles/app.scss
@@ -27,6 +27,8 @@
 
 html,
 body {
+  position: relative;
+
   width: 100vw;
   height: 100vh;
 
@@ -57,7 +59,7 @@ body {
 
 main {
   width: 100vw;
-  position: absolute;
+  margin-top: -5rem;
 }
 
 .clickable {
