--- a/src/lib/styles/mixins/_breakpoints.scss
+++ b/src/lib/styles/mixins/_breakpoints.scss
@@ -1,48 +1,77 @@
 @use "sass:map";
 
-$breakpoints: (
-        xs: 576px,
-        sm: 576px,
-        md: 768px,
-        lg: 992px,
-        xl: 1200px,
-        xxl: 1400px,
-);
+@use "../variables" as *;
+
+@function breakpointName($name, $breakpoints) {
+  @return if($name == 'xs', "", "-#{$name}")
+}
+
+@function breakpoint-min($name, $breakpoints: $grid-breakpoints) {
+  $min: map-get($breakpoints, $name);
+  @return if($min != 0, $min, null);
+}
+
+@function breakpoint-max($name, $breakpoints: $grid-breakpoints) {
+  $max: map-get($breakpoints, $name);
+  @return if($max and $max > 0, $max - .02, null);
+}
+
+@mixin media-breakpoint-up($name, $breakpoints: $grid-breakpoints) {
+  $min: breakpoint-min($name, $breakpoints);
+  @if $min {
+    @media (min-width: $min) {
+      @content;
+    }
+  } @else {
+    @content;
+  }
+}
+
+@mixin media-breakpoint-down($name, $breakpoints: $grid-breakpoints) {
+  $max: breakpoint-max($name, $breakpoints);
+  @if $max {
+    @media (max-width: $max) {
+      @content;
+    }
+  } @else {
+    @content;
+  }
+}
 
 // Mixins that sets breakpoints on the page to the above values. To add styles to a specific breakpoint, @include it in
 // a .scss file and add the relevant styling
 @mixin xs {
-  @media (max-width: map.get($breakpoints, "xs")) {
+  @media (max-width: map.get($grid-breakpoints, "xs")) {
     @content;
   }
 }
 
 @mixin sm {
-  @media (min-width: map.get($breakpoints, "sm")) {
+  @media (min-width: map.get($grid-breakpoints, "sm")) {
     @content;
   }
 }
 
 @mixin md {
-  @media (min-width: map.get($breakpoints, "md")) {
+  @media (min-width: map.get($grid-breakpoints, "md")) {
     @content;
   }
 }
 
 @mixin lg {
-  @media (min-width: map.get($breakpoints, "lg")) {
+  @media (min-width: map.get($grid-breakpoints, "lg")) {
     @content;
   }
 }
 
 @mixin xl {
-  @media (min-width: map.get($breakpoints, "xl")) {
+  @media (min-width: map.get($grid-breakpoints, "xl")) {
     @content;
   }
 }
 
 @mixin xxl {
-  @media (min-width: map.get($breakpoints, "xxl")) {
+  @media (min-width: map.get($grid-breakpoints, "xxl")) {
     @content;
   }
 }
