Added content to about page

--- a/src/lib/styles/_variables-dark.scss
+++ b/src/lib/styles/_variables-dark.scss
@@ -27,8 +27,8 @@ $dark: (
   //"primary-bg": oklch(0.4 0.069 267.269),
 
   "shadow": (0px 2px 2px oklch(0 0 0 / 0.2), 0px 4px 4px oklch(0 0 0 / 0.1)),
-
   "blend-mode": overlay,
+  "background-img": url('/resources/images/noisy_net.png'),
 );
 
 /* Possible blue alternative to primary red? */
