--- a/src/lib/styles/_variables-dark.scss
+++ b/src/lib/styles/_variables-dark.scss
@@ -28,7 +28,7 @@ $dark: (
 
   "shadow": (0px 2px 2px oklch(0 0 0 / 0.2), 0px 4px 4px oklch(0 0 0 / 0.1)),
   "blend-mode": overlay,
-  "background-img": url('/resources/images/noisy_net.png'),
+  "background-img": url('/resources/images/noisy_net.webp'),
 );
 
 /* Possible blue alternative to primary red? */
