--- a/src/lib/styles/_reboot.scss
+++ b/src/lib/styles/_reboot.scss
@@ -61,6 +61,10 @@
     background-color: var(--bg);
     width: 100vw;
     margin-top: -5rem;
+
+    @media screen and (max-width: 767px) {
+      margin-top: 0;
+    }
   }
 
   .animatedElement * {
