--- a/src/lib/styles/_variables.scss
+++ b/src/lib/styles/_variables.scss
@@ -79,6 +79,16 @@ $heading-sizes: (
         "h6": $font-size-base,
 );
 
+// For mobile
+$heading-sizes-small: (
+        "h1": $font-size-base * 2.442,
+        "h2": $font-size-base * 1.954,
+        "h3": $font-size-base * 1.563,
+        "h4": $font-size-base * 1.25,
+        "h5": $font-size-base,
+        "h6": $font-size-base,
+);
+
 $headings-margin-bottom: 1rem * .5 !default;
 $headings-font-family: $font-family-headings !default;
 $headings-font-style: null !default;
@@ -89,7 +99,7 @@ $headings-color: inherit !default;
 
 // Breakpoints
 $grid-breakpoints: (
-        xs: 576px,
+        xs: 0,
         sm: 576px,
         md: 768px,
         lg: 992px,
@@ -114,6 +124,11 @@ $columnWidths: (
         12: 100%
 );
 // End grid
+
+// Grid columns
+$grid-columns: 12 !default;
+$grid-gutter-width: 1rem !default;
+// End grid columns
 
 // Layout
 $sizes: (
