--- a/src/lib/styles/_reboot.scss
+++ b/src/lib/styles/_reboot.scss
@@ -22,6 +22,11 @@
     }
   }
 
+  html {
+    overflow-x: hidden;
+    position: relative;
+  }
+
   body {
     @include font-size($font-size-base);
     font-family: $font-family-body;
