--- a/src/lib/styles/_variables.scss
+++ b/src/lib/styles/_variables.scss
@@ -130,19 +130,34 @@ $grid-columns: 12 !default;
 $grid-gutter-width: 1rem !default;
 // End grid columns
 
-// Layout
+// Layout margins and paddings
+$sides: (
+        m: margin,
+        p: padding,
+);
+
+$directions: (
+        "": "",
+        "t": "-top",
+        "b": "-bottom",
+        "s": "-left",
+        "e": "-right",
+        "x": ("-left", "-right"),
+        "y": ("-top", "-bottom"),
+);
+
 $sizes: (
         0: 0,
-        1: 0.25rem,
-        2: 0.5rem,
+        1: 0.5rem,
+        2: 0.75rem,
         3: 1rem,
         4: 1.5rem,
         5: 2rem,
-        6: 4rem,
-        7: 6rem,
-        8: 8rem,
-        9: 9rem,
-        10: 10rem,
+        6: 3rem,
+        7: 4rem,
+        8: 5rem,
+        9: 6rem,
+        10: 9rem,
 );
 
 $percentages: (
