Refactor nav and sidebar

--- a/src/lib/styles/_reboot.scss
+++ b/src/lib/styles/_reboot.scss
@@ -73,15 +73,18 @@
     }
   }
 
-  .animatedElement * {
-    transition: background-color 0.3s ease-in-out,
-    color 0.3s ease-in-out,
-    border-color 0.3s ease-in-out;
+  .animatedElement {
+    *, & {
+      transition:
+              background-color 0.3s ease-in-out,
+              color 0.3s ease-in-out,
+              border-color 0.3s ease-in-out;
 
-    svg,
-    use {
-      transition: stroke 0.3s ease-in-out,
-      fill 0.3s ease-in-out;
+      svg, use {
+        transition:
+                stroke 0.3s ease-in-out,
+                fill 0.3s ease-in-out;
+      }
     }
   }
 
