--- a/src/lib/styles/_variables.scss
+++ b/src/lib/styles/_variables.scss
@@ -99,12 +99,11 @@ $headings-color: inherit !default;
 
 // Breakpoints
 $grid-breakpoints: (
-        xs: 0,
-        sm: 576px,
-        md: 768px,
-        lg: 992px,
-        xl: 1200px,
-        xxl: 1400px
+        sm: 640px, // Large phones
+        md: 768px, // Tablets
+        lg: 1024px, // Small laptops
+        xl: 1280px, // Desktops
+        xxl: 1536px // Wide screens
 );
 // End breakpoints
 
