--- a/src/lib/styles/_reset.scss
+++ b/src/lib/styles/_reset.scss
@@ -15,6 +15,7 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   -webkit-font-smoothing: antialiased;
+  background-color: var(--bg-surface);
 }
 
 img,
